<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainStyle"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:id="@+id/city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/itinerary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/itinerary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/contentLayoutBottom"
        style="@style/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_poi"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:background="@drawable/buttonroundedcorners2"
            android:text="@string/add_poi_label"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/delete_poiButton"
            android:layout_width="132dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/buttonroundedcorners3"
            android:text="@string/delete_poi_label"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="6dp"
        android:layout_weight="0.47"
        android:background="@drawable/listroundedcorners"
        android:cacheColorHint="#00ffffff" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonroundedcorners"
            android:text="@string/start_label"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>