<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainStyle"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="270dp" >

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_username"
                style="@style/TextFieldTitle"
                android:text="@string/username_connect" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/text_age"
                style="@style/TextFieldTitle"
                android:text="@string/age_prompt" />

            <Spinner
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/age_prompt" />

            <TextView
                android:id="@+id/text_languages"
                style="@style/TextFieldTitle"
                android:text="@string/languages_prompt" />

            <Spinner
                android:id="@+id/languages"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/languages_prompt" />

            <TextView
                android:id="@+id/text_interests"
                style="@style/TextFieldTitle"
                android:text="@string/interests_prompt" />

            <Spinner
                android:id="@+id/interests"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/interests_prompt" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonroundedcorners"
            android:text="@string/save"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>