<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainStyle" >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/choose_mode_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/direction" />

        <Button
            android:id="@+id/free_walk"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonroundedcorners"
            android:text="@string/free_walk"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/guided_tour"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonroundedcorners"
            android:text="@string/guided_tour"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>