<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainStyle" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#CC0101"
        android:padding="7dp"
        android:paddingLeft="15dp"
        android:text="@string/select_city_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />
    
    <LinearLayout
        android:id="@+id/info_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/listroundedcorners"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/poi_description_text"
            android:textStyle="bold" 
            android:textColor="#33B5E5"
            android:layout_marginBottom="4dp"/>
    	
        <LinearLayout
        	android:background="#33B5E5"
        	android:layout_width="fill_parent"
            android:layout_height="1.5dp"
             android:layout_marginBottom="4dp"
        	></LinearLayout>
        
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="This is a freakin&apos; description!"
            android:textColor="#ffffff"
            android:layout_marginBottom="12dp" 
            />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/poi_address_text"
            android:textStyle="bold"
            android:textColor="#33B5E5"
            android:layout_marginBottom="2dp"
            
            />

            <LinearLayout
        	android:background="#33B5E5"
        	android:layout_width="fill_parent"
            android:layout_height="1.5dp"
             android:layout_marginBottom="4dp"
        	></LinearLayout>
                       
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="Bigandlong street, 8\n18892 London\nUnited Kingdoms" 
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>