<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    style="@style/MainStyle"
    android:padding="20dip" >

    <!--
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">
    -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="20dp" >

            <ScrollView
                android:id="@+id/poi_tab_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/poi_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:textStyle="bold" />
                        <!--
			    		<ImageView android:id="@+id/internet" 
					    	android:layout_width="wrap_content" 
					    	android:layout_height="fill_parent"
					    	android:layout_alignParentRight="true"
					    	android:src="@drawable/internet"
					    	android:adjustViewBounds="true"
			            	android:scaleType="fitXY"
					    />
                        -->

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/poi_latitude_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:text="@string/location_latitude_label"
                            android:textColor="#000"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/poi_latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="9sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/poi_longitude_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="20dp"
                            android:text="@string/location_longitude_label"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/poi_longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="9sp"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/poi_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textStyle="italic" />

                    <Gallery
                        android:id="@+id/poi_gallery"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                    </Gallery>

                    <ImageView
                        android:id="@+id/poi_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="20dp" >
                    </ImageView>
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/poi_tab_children"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/poi_children_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/poi_children_list_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_sublocations"
                    android:textStyle="italic" />

                <ListView
                    android:id="@+id/poi_children_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/poi_tab_itinerary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/poi_itinerary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/poi_itinerary_list_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_itineraries"
                    android:textStyle="italic" />

                <ListView
                    android:id="@+id/poi_itinerary_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>